build/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLASS
    DEF
    RETURN

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     if_statement -> IF expression COLON statements elif_else_block
Rule 4     list_items -> all_datatypes COMMA list_items
Rule 5     list_items -> all_datatypes
Rule 6     list_items -> empty
Rule 7     empty -> <empty>
Rule 8     elif_else_block -> ELIF expression COLON statements elif_else_block
Rule 9     elif_else_block -> ELSE COLON statements
Rule 10    elif_else_block -> empty
Rule 11    statement -> data_declaration
Rule 12    statement -> expression
Rule 13    statement -> if_statement
Rule 14    kv_list_items -> kv COMMA kv_list_items
Rule 15    kv_list_items -> kv
Rule 16    kv_list_items -> empty
Rule 17    data_declaration -> IDENTIFIER EQUALS expression
Rule 18    expression -> IDENTIFIER
Rule 19    expression -> all_datatypes
Rule 20    expression -> comparison_expression
Rule 21    kv -> STRING COLON all_datatypes
Rule 22    kv -> INT COLON all_datatypes
Rule 23    comparison_expression -> expression GT expression
Rule 24    comparison_expression -> expression LT expression
Rule 25    comparison_expression -> expression EQEQ expression
Rule 26    comparison_expression -> expression NEQ expression
Rule 27    comparison_expression -> expression GE expression
Rule 28    comparison_expression -> expression LE expression
Rule 29    list -> LBRACKET list_items RBRACKET
Rule 30    tuple -> LPAREN list_items RPAREN
Rule 31    set -> LBRACE list_items RBRACE
Rule 32    dict -> LBRACE kv_list_items RBRACE
Rule 33    basic_datatype -> INT
Rule 34    basic_datatype -> FLOAT
Rule 35    basic_datatype -> STRING
Rule 36    basic_datatype -> BOOL
Rule 37    all_datatypes -> collection
Rule 38    all_datatypes -> basic_datatype
Rule 39    collection -> list
Rule 40    collection -> tuple
Rule 41    collection -> dict
Rule 42    collection -> set
Rule 43    typehint_type -> COLON TYPE_INT
Rule 44    typehint_type -> TYPE_FLOAT
Rule 45    typehint_type -> TYPE_STRING
Rule 46    typehint_type -> TYPE_BOOL
Rule 47    typehint_type -> TYPE_LIST
Rule 48    typehint_type -> TYPE_TUPLE
Rule 49    typehint_type -> TYPE_DICT
Rule 50    typehint_type -> TYPE_SET
Rule 51    typehint -> COLON typehint_type
Rule 52    typehint -> empty

Terminals, with rules where they appear

BOOL                 : 36
CLASS                : 
COLON                : 3 8 9 21 22 43 51
COMMA                : 4 14
DEF                  : 
ELIF                 : 8
ELSE                 : 9
EQEQ                 : 25
EQUALS               : 17
FLOAT                : 34
GE                   : 27
GT                   : 23
IDENTIFIER           : 17 18
IF                   : 3
INT                  : 22 33
LBRACE               : 31 32
LBRACKET             : 29
LE                   : 28
LPAREN               : 30
LT                   : 24
NEQ                  : 26
RBRACE               : 31 32
RBRACKET             : 29
RETURN               : 
RPAREN               : 30
STRING               : 21 35
TYPE_BOOL            : 46
TYPE_DICT            : 49
TYPE_FLOAT           : 44
TYPE_INT             : 43
TYPE_LIST            : 47
TYPE_SET             : 50
TYPE_STRING          : 45
TYPE_TUPLE           : 48
error                : 

Nonterminals, with rules where they appear

all_datatypes        : 4 5 19 21 22
basic_datatype       : 38
collection           : 37
comparison_expression : 20
data_declaration     : 11
dict                 : 41
elif_else_block      : 3 8
empty                : 6 10 16 52
expression           : 3 8 12 17 23 23 24 24 25 25 26 26 27 27 28 28
if_statement         : 13
kv                   : 14 15
kv_list_items        : 14 32
list                 : 39
list_items           : 4 29 30 31
set                  : 42
statement            : 1 2
statements           : 2 3 8 9 0
tuple                : 40
typehint             : 
typehint_type        : 51

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (11) statement -> . data_declaration
    (12) statement -> . expression
    (13) statement -> . if_statement
    (17) data_declaration -> . IDENTIFIER EQUALS expression
    (18) expression -> . IDENTIFIER
    (19) expression -> . all_datatypes
    (20) expression -> . comparison_expression
    (3) if_statement -> . IF expression COLON statements elif_else_block
    (37) all_datatypes -> . collection
    (38) all_datatypes -> . basic_datatype
    (23) comparison_expression -> . expression GT expression
    (24) comparison_expression -> . expression LT expression
    (25) comparison_expression -> . expression EQEQ expression
    (26) comparison_expression -> . expression NEQ expression
    (27) comparison_expression -> . expression GE expression
    (28) comparison_expression -> . expression LE expression
    (39) collection -> . list
    (40) collection -> . tuple
    (41) collection -> . dict
    (42) collection -> . set
    (33) basic_datatype -> . INT
    (34) basic_datatype -> . FLOAT
    (35) basic_datatype -> . STRING
    (36) basic_datatype -> . BOOL
    (29) list -> . LBRACKET list_items RBRACKET
    (30) tuple -> . LPAREN list_items RPAREN
    (32) dict -> . LBRACE kv_list_items RBRACE
    (31) set -> . LBRACE list_items RBRACE

    IDENTIFIER      shift and go to state 6
    IF              shift and go to state 9
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LBRACKET        shift and go to state 20
    LPAREN          shift and go to state 21
    LBRACE          shift and go to state 22

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    data_declaration               shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    all_datatypes                  shift and go to state 7
    comparison_expression          shift and go to state 8
    collection                     shift and go to state 10
    basic_datatype                 shift and go to state 11
    list                           shift and go to state 12
    tuple                          shift and go to state 13
    dict                           shift and go to state 14
    set                            shift and go to state 15

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (11) statement -> . data_declaration
    (12) statement -> . expression
    (13) statement -> . if_statement
    (17) data_declaration -> . IDENTIFIER EQUALS expression
    (18) expression -> . IDENTIFIER
    (19) expression -> . all_datatypes
    (20) expression -> . comparison_expression
    (3) if_statement -> . IF expression COLON statements elif_else_block
    (37) all_datatypes -> . collection
    (38) all_datatypes -> . basic_datatype
    (23) comparison_expression -> . expression GT expression
    (24) comparison_expression -> . expression LT expression
    (25) comparison_expression -> . expression EQEQ expression
    (26) comparison_expression -> . expression NEQ expression
    (27) comparison_expression -> . expression GE expression
    (28) comparison_expression -> . expression LE expression
    (39) collection -> . list
    (40) collection -> . tuple
    (41) collection -> . dict
    (42) collection -> . set
    (33) basic_datatype -> . INT
    (34) basic_datatype -> . FLOAT
    (35) basic_datatype -> . STRING
    (36) basic_datatype -> . BOOL
    (29) list -> . LBRACKET list_items RBRACKET
    (30) tuple -> . LPAREN list_items RPAREN
    (32) dict -> . LBRACE kv_list_items RBRACE
    (31) set -> . LBRACE list_items RBRACE

    IDENTIFIER      shift and go to state 6
    IF              shift and go to state 9
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LBRACKET        shift and go to state 20
    LPAREN          shift and go to state 21
    LBRACE          shift and go to state 22

    statement                      shift and go to state 23
    data_declaration               shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    all_datatypes                  shift and go to state 7
    comparison_expression          shift and go to state 8
    collection                     shift and go to state 10
    basic_datatype                 shift and go to state 11
    list                           shift and go to state 12
    tuple                          shift and go to state 13
    dict                           shift and go to state 14
    set                            shift and go to state 15

state 2

    (1) statements -> statement .

    IDENTIFIER      reduce using rule 1 (statements -> statement .)
    IF              reduce using rule 1 (statements -> statement .)
    INT             reduce using rule 1 (statements -> statement .)
    FLOAT           reduce using rule 1 (statements -> statement .)
    STRING          reduce using rule 1 (statements -> statement .)
    BOOL            reduce using rule 1 (statements -> statement .)
    LBRACKET        reduce using rule 1 (statements -> statement .)
    LPAREN          reduce using rule 1 (statements -> statement .)
    LBRACE          reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)
    ELIF            reduce using rule 1 (statements -> statement .)
    ELSE            reduce using rule 1 (statements -> statement .)


state 3

    (11) statement -> data_declaration .

    IDENTIFIER      reduce using rule 11 (statement -> data_declaration .)
    IF              reduce using rule 11 (statement -> data_declaration .)
    INT             reduce using rule 11 (statement -> data_declaration .)
    FLOAT           reduce using rule 11 (statement -> data_declaration .)
    STRING          reduce using rule 11 (statement -> data_declaration .)
    BOOL            reduce using rule 11 (statement -> data_declaration .)
    LBRACKET        reduce using rule 11 (statement -> data_declaration .)
    LPAREN          reduce using rule 11 (statement -> data_declaration .)
    LBRACE          reduce using rule 11 (statement -> data_declaration .)
    $end            reduce using rule 11 (statement -> data_declaration .)
    ELIF            reduce using rule 11 (statement -> data_declaration .)
    ELSE            reduce using rule 11 (statement -> data_declaration .)


state 4

    (12) statement -> expression .
    (23) comparison_expression -> expression . GT expression
    (24) comparison_expression -> expression . LT expression
    (25) comparison_expression -> expression . EQEQ expression
    (26) comparison_expression -> expression . NEQ expression
    (27) comparison_expression -> expression . GE expression
    (28) comparison_expression -> expression . LE expression

    IDENTIFIER      reduce using rule 12 (statement -> expression .)
    IF              reduce using rule 12 (statement -> expression .)
    INT             reduce using rule 12 (statement -> expression .)
    FLOAT           reduce using rule 12 (statement -> expression .)
    STRING          reduce using rule 12 (statement -> expression .)
    BOOL            reduce using rule 12 (statement -> expression .)
    LBRACKET        reduce using rule 12 (statement -> expression .)
    LPAREN          reduce using rule 12 (statement -> expression .)
    LBRACE          reduce using rule 12 (statement -> expression .)
    $end            reduce using rule 12 (statement -> expression .)
    ELIF            reduce using rule 12 (statement -> expression .)
    ELSE            reduce using rule 12 (statement -> expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    EQEQ            shift and go to state 26
    NEQ             shift and go to state 27
    GE              shift and go to state 28
    LE              shift and go to state 29


state 5

    (13) statement -> if_statement .

    IDENTIFIER      reduce using rule 13 (statement -> if_statement .)
    IF              reduce using rule 13 (statement -> if_statement .)
    INT             reduce using rule 13 (statement -> if_statement .)
    FLOAT           reduce using rule 13 (statement -> if_statement .)
    STRING          reduce using rule 13 (statement -> if_statement .)
    BOOL            reduce using rule 13 (statement -> if_statement .)
    LBRACKET        reduce using rule 13 (statement -> if_statement .)
    LPAREN          reduce using rule 13 (statement -> if_statement .)
    LBRACE          reduce using rule 13 (statement -> if_statement .)
    $end            reduce using rule 13 (statement -> if_statement .)
    ELIF            reduce using rule 13 (statement -> if_statement .)
    ELSE            reduce using rule 13 (statement -> if_statement .)


state 6

    (17) data_declaration -> IDENTIFIER . EQUALS expression
    (18) expression -> IDENTIFIER .

    EQUALS          shift and go to state 30
    GT              reduce using rule 18 (expression -> IDENTIFIER .)
    LT              reduce using rule 18 (expression -> IDENTIFIER .)
    EQEQ            reduce using rule 18 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 18 (expression -> IDENTIFIER .)
    GE              reduce using rule 18 (expression -> IDENTIFIER .)
    LE              reduce using rule 18 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 18 (expression -> IDENTIFIER .)
    IF              reduce using rule 18 (expression -> IDENTIFIER .)
    INT             reduce using rule 18 (expression -> IDENTIFIER .)
    FLOAT           reduce using rule 18 (expression -> IDENTIFIER .)
    STRING          reduce using rule 18 (expression -> IDENTIFIER .)
    BOOL            reduce using rule 18 (expression -> IDENTIFIER .)
    LBRACKET        reduce using rule 18 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 18 (expression -> IDENTIFIER .)
    LBRACE          reduce using rule 18 (expression -> IDENTIFIER .)
    $end            reduce using rule 18 (expression -> IDENTIFIER .)
    ELIF            reduce using rule 18 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 18 (expression -> IDENTIFIER .)


state 7

    (19) expression -> all_datatypes .

    GT              reduce using rule 19 (expression -> all_datatypes .)
    LT              reduce using rule 19 (expression -> all_datatypes .)
    EQEQ            reduce using rule 19 (expression -> all_datatypes .)
    NEQ             reduce using rule 19 (expression -> all_datatypes .)
    GE              reduce using rule 19 (expression -> all_datatypes .)
    LE              reduce using rule 19 (expression -> all_datatypes .)
    IDENTIFIER      reduce using rule 19 (expression -> all_datatypes .)
    IF              reduce using rule 19 (expression -> all_datatypes .)
    INT             reduce using rule 19 (expression -> all_datatypes .)
    FLOAT           reduce using rule 19 (expression -> all_datatypes .)
    STRING          reduce using rule 19 (expression -> all_datatypes .)
    BOOL            reduce using rule 19 (expression -> all_datatypes .)
    LBRACKET        reduce using rule 19 (expression -> all_datatypes .)
    LPAREN          reduce using rule 19 (expression -> all_datatypes .)
    LBRACE          reduce using rule 19 (expression -> all_datatypes .)
    $end            reduce using rule 19 (expression -> all_datatypes .)
    COLON           reduce using rule 19 (expression -> all_datatypes .)
    ELIF            reduce using rule 19 (expression -> all_datatypes .)
    ELSE            reduce using rule 19 (expression -> all_datatypes .)


state 8

    (20) expression -> comparison_expression .

    GT              reduce using rule 20 (expression -> comparison_expression .)
    LT              reduce using rule 20 (expression -> comparison_expression .)
    EQEQ            reduce using rule 20 (expression -> comparison_expression .)
    NEQ             reduce using rule 20 (expression -> comparison_expression .)
    GE              reduce using rule 20 (expression -> comparison_expression .)
    LE              reduce using rule 20 (expression -> comparison_expression .)
    IDENTIFIER      reduce using rule 20 (expression -> comparison_expression .)
    IF              reduce using rule 20 (expression -> comparison_expression .)
    INT             reduce using rule 20 (expression -> comparison_expression .)
    FLOAT           reduce using rule 20 (expression -> comparison_expression .)
    STRING          reduce using rule 20 (expression -> comparison_expression .)
    BOOL            reduce using rule 20 (expression -> comparison_expression .)
    LBRACKET        reduce using rule 20 (expression -> comparison_expression .)
    LPAREN          reduce using rule 20 (expression -> comparison_expression .)
    LBRACE          reduce using rule 20 (expression -> comparison_expression .)
    $end            reduce using rule 20 (expression -> comparison_expression .)
    COLON           reduce using rule 20 (expression -> comparison_expression .)
    ELIF            reduce using rule 20 (expression -> comparison_expression .)
    ELSE            reduce using rule 20 (expression -> comparison_expression .)


state 9

    (3) if_statement -> IF . expression COLON statements elif_else_block
    (18) expression -> . IDENTIFIER
    (19) expression -> . all_datatypes
    (20) expression -> . comparison_expression
    (37) all_datatypes -> . collection
    (38) all_datatypes -> . basic_datatype
    (23) comparison_expression -> . expression GT expression
    (24) comparison_expression -> . expression LT expression
    (25) comparison_expression -> . expression EQEQ expression
    (26) comparison_expression -> . expression NEQ expression
    (27) comparison_expression -> . expression GE expression
    (28) comparison_expression -> . expression LE expression
    (39) collection -> . list
    (40) collection -> . tuple
    (41) collection -> . dict
    (42) collection -> . set
    (33) basic_datatype -> . INT
    (34) basic_datatype -> . FLOAT
    (35) basic_datatype -> . STRING
    (36) basic_datatype -> . BOOL
    (29) list -> . LBRACKET list_items RBRACKET
    (30) tuple -> . LPAREN list_items RPAREN
    (32) dict -> . LBRACE kv_list_items RBRACE
    (31) set -> . LBRACE list_items RBRACE

    IDENTIFIER      shift and go to state 32
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LBRACKET        shift and go to state 20
    LPAREN          shift and go to state 21
    LBRACE          shift and go to state 22

    expression                     shift and go to state 31
    all_datatypes                  shift and go to state 7
    comparison_expression          shift and go to state 8
    collection                     shift and go to state 10
    basic_datatype                 shift and go to state 11
    list                           shift and go to state 12
    tuple                          shift and go to state 13
    dict                           shift and go to state 14
    set                            shift and go to state 15

state 10

    (37) all_datatypes -> collection .

    GT              reduce using rule 37 (all_datatypes -> collection .)
    LT              reduce using rule 37 (all_datatypes -> collection .)
    EQEQ            reduce using rule 37 (all_datatypes -> collection .)
    NEQ             reduce using rule 37 (all_datatypes -> collection .)
    GE              reduce using rule 37 (all_datatypes -> collection .)
    LE              reduce using rule 37 (all_datatypes -> collection .)
    IDENTIFIER      reduce using rule 37 (all_datatypes -> collection .)
    IF              reduce using rule 37 (all_datatypes -> collection .)
    INT             reduce using rule 37 (all_datatypes -> collection .)
    FLOAT           reduce using rule 37 (all_datatypes -> collection .)
    STRING          reduce using rule 37 (all_datatypes -> collection .)
    BOOL            reduce using rule 37 (all_datatypes -> collection .)
    LBRACKET        reduce using rule 37 (all_datatypes -> collection .)
    LPAREN          reduce using rule 37 (all_datatypes -> collection .)
    LBRACE          reduce using rule 37 (all_datatypes -> collection .)
    $end            reduce using rule 37 (all_datatypes -> collection .)
    COLON           reduce using rule 37 (all_datatypes -> collection .)
    COMMA           reduce using rule 37 (all_datatypes -> collection .)
    RBRACKET        reduce using rule 37 (all_datatypes -> collection .)
    RPAREN          reduce using rule 37 (all_datatypes -> collection .)
    RBRACE          reduce using rule 37 (all_datatypes -> collection .)
    ELIF            reduce using rule 37 (all_datatypes -> collection .)
    ELSE            reduce using rule 37 (all_datatypes -> collection .)


state 11

    (38) all_datatypes -> basic_datatype .

    GT              reduce using rule 38 (all_datatypes -> basic_datatype .)
    LT              reduce using rule 38 (all_datatypes -> basic_datatype .)
    EQEQ            reduce using rule 38 (all_datatypes -> basic_datatype .)
    NEQ             reduce using rule 38 (all_datatypes -> basic_datatype .)
    GE              reduce using rule 38 (all_datatypes -> basic_datatype .)
    LE              reduce using rule 38 (all_datatypes -> basic_datatype .)
    IDENTIFIER      reduce using rule 38 (all_datatypes -> basic_datatype .)
    IF              reduce using rule 38 (all_datatypes -> basic_datatype .)
    INT             reduce using rule 38 (all_datatypes -> basic_datatype .)
    FLOAT           reduce using rule 38 (all_datatypes -> basic_datatype .)
    STRING          reduce using rule 38 (all_datatypes -> basic_datatype .)
    BOOL            reduce using rule 38 (all_datatypes -> basic_datatype .)
    LBRACKET        reduce using rule 38 (all_datatypes -> basic_datatype .)
    LPAREN          reduce using rule 38 (all_datatypes -> basic_datatype .)
    LBRACE          reduce using rule 38 (all_datatypes -> basic_datatype .)
    $end            reduce using rule 38 (all_datatypes -> basic_datatype .)
    COLON           reduce using rule 38 (all_datatypes -> basic_datatype .)
    COMMA           reduce using rule 38 (all_datatypes -> basic_datatype .)
    RBRACKET        reduce using rule 38 (all_datatypes -> basic_datatype .)
    RPAREN          reduce using rule 38 (all_datatypes -> basic_datatype .)
    RBRACE          reduce using rule 38 (all_datatypes -> basic_datatype .)
    ELIF            reduce using rule 38 (all_datatypes -> basic_datatype .)
    ELSE            reduce using rule 38 (all_datatypes -> basic_datatype .)


state 12

    (39) collection -> list .

    GT              reduce using rule 39 (collection -> list .)
    LT              reduce using rule 39 (collection -> list .)
    EQEQ            reduce using rule 39 (collection -> list .)
    NEQ             reduce using rule 39 (collection -> list .)
    GE              reduce using rule 39 (collection -> list .)
    LE              reduce using rule 39 (collection -> list .)
    IDENTIFIER      reduce using rule 39 (collection -> list .)
    IF              reduce using rule 39 (collection -> list .)
    INT             reduce using rule 39 (collection -> list .)
    FLOAT           reduce using rule 39 (collection -> list .)
    STRING          reduce using rule 39 (collection -> list .)
    BOOL            reduce using rule 39 (collection -> list .)
    LBRACKET        reduce using rule 39 (collection -> list .)
    LPAREN          reduce using rule 39 (collection -> list .)
    LBRACE          reduce using rule 39 (collection -> list .)
    $end            reduce using rule 39 (collection -> list .)
    COLON           reduce using rule 39 (collection -> list .)
    COMMA           reduce using rule 39 (collection -> list .)
    RBRACKET        reduce using rule 39 (collection -> list .)
    RPAREN          reduce using rule 39 (collection -> list .)
    RBRACE          reduce using rule 39 (collection -> list .)
    ELIF            reduce using rule 39 (collection -> list .)
    ELSE            reduce using rule 39 (collection -> list .)


state 13

    (40) collection -> tuple .

    GT              reduce using rule 40 (collection -> tuple .)
    LT              reduce using rule 40 (collection -> tuple .)
    EQEQ            reduce using rule 40 (collection -> tuple .)
    NEQ             reduce using rule 40 (collection -> tuple .)
    GE              reduce using rule 40 (collection -> tuple .)
    LE              reduce using rule 40 (collection -> tuple .)
    IDENTIFIER      reduce using rule 40 (collection -> tuple .)
    IF              reduce using rule 40 (collection -> tuple .)
    INT             reduce using rule 40 (collection -> tuple .)
    FLOAT           reduce using rule 40 (collection -> tuple .)
    STRING          reduce using rule 40 (collection -> tuple .)
    BOOL            reduce using rule 40 (collection -> tuple .)
    LBRACKET        reduce using rule 40 (collection -> tuple .)
    LPAREN          reduce using rule 40 (collection -> tuple .)
    LBRACE          reduce using rule 40 (collection -> tuple .)
    $end            reduce using rule 40 (collection -> tuple .)
    COLON           reduce using rule 40 (collection -> tuple .)
    COMMA           reduce using rule 40 (collection -> tuple .)
    RBRACKET        reduce using rule 40 (collection -> tuple .)
    RPAREN          reduce using rule 40 (collection -> tuple .)
    RBRACE          reduce using rule 40 (collection -> tuple .)
    ELIF            reduce using rule 40 (collection -> tuple .)
    ELSE            reduce using rule 40 (collection -> tuple .)


state 14

    (41) collection -> dict .

    GT              reduce using rule 41 (collection -> dict .)
    LT              reduce using rule 41 (collection -> dict .)
    EQEQ            reduce using rule 41 (collection -> dict .)
    NEQ             reduce using rule 41 (collection -> dict .)
    GE              reduce using rule 41 (collection -> dict .)
    LE              reduce using rule 41 (collection -> dict .)
    IDENTIFIER      reduce using rule 41 (collection -> dict .)
    IF              reduce using rule 41 (collection -> dict .)
    INT             reduce using rule 41 (collection -> dict .)
    FLOAT           reduce using rule 41 (collection -> dict .)
    STRING          reduce using rule 41 (collection -> dict .)
    BOOL            reduce using rule 41 (collection -> dict .)
    LBRACKET        reduce using rule 41 (collection -> dict .)
    LPAREN          reduce using rule 41 (collection -> dict .)
    LBRACE          reduce using rule 41 (collection -> dict .)
    $end            reduce using rule 41 (collection -> dict .)
    COLON           reduce using rule 41 (collection -> dict .)
    COMMA           reduce using rule 41 (collection -> dict .)
    RBRACKET        reduce using rule 41 (collection -> dict .)
    RPAREN          reduce using rule 41 (collection -> dict .)
    RBRACE          reduce using rule 41 (collection -> dict .)
    ELIF            reduce using rule 41 (collection -> dict .)
    ELSE            reduce using rule 41 (collection -> dict .)


state 15

    (42) collection -> set .

    GT              reduce using rule 42 (collection -> set .)
    LT              reduce using rule 42 (collection -> set .)
    EQEQ            reduce using rule 42 (collection -> set .)
    NEQ             reduce using rule 42 (collection -> set .)
    GE              reduce using rule 42 (collection -> set .)
    LE              reduce using rule 42 (collection -> set .)
    IDENTIFIER      reduce using rule 42 (collection -> set .)
    IF              reduce using rule 42 (collection -> set .)
    INT             reduce using rule 42 (collection -> set .)
    FLOAT           reduce using rule 42 (collection -> set .)
    STRING          reduce using rule 42 (collection -> set .)
    BOOL            reduce using rule 42 (collection -> set .)
    LBRACKET        reduce using rule 42 (collection -> set .)
    LPAREN          reduce using rule 42 (collection -> set .)
    LBRACE          reduce using rule 42 (collection -> set .)
    $end            reduce using rule 42 (collection -> set .)
    COLON           reduce using rule 42 (collection -> set .)
    COMMA           reduce using rule 42 (collection -> set .)
    RBRACKET        reduce using rule 42 (collection -> set .)
    RPAREN          reduce using rule 42 (collection -> set .)
    RBRACE          reduce using rule 42 (collection -> set .)
    ELIF            reduce using rule 42 (collection -> set .)
    ELSE            reduce using rule 42 (collection -> set .)


state 16

    (33) basic_datatype -> INT .

    GT              reduce using rule 33 (basic_datatype -> INT .)
    LT              reduce using rule 33 (basic_datatype -> INT .)
    EQEQ            reduce using rule 33 (basic_datatype -> INT .)
    NEQ             reduce using rule 33 (basic_datatype -> INT .)
    GE              reduce using rule 33 (basic_datatype -> INT .)
    LE              reduce using rule 33 (basic_datatype -> INT .)
    IDENTIFIER      reduce using rule 33 (basic_datatype -> INT .)
    IF              reduce using rule 33 (basic_datatype -> INT .)
    INT             reduce using rule 33 (basic_datatype -> INT .)
    FLOAT           reduce using rule 33 (basic_datatype -> INT .)
    STRING          reduce using rule 33 (basic_datatype -> INT .)
    BOOL            reduce using rule 33 (basic_datatype -> INT .)
    LBRACKET        reduce using rule 33 (basic_datatype -> INT .)
    LPAREN          reduce using rule 33 (basic_datatype -> INT .)
    LBRACE          reduce using rule 33 (basic_datatype -> INT .)
    $end            reduce using rule 33 (basic_datatype -> INT .)
    COLON           reduce using rule 33 (basic_datatype -> INT .)
    COMMA           reduce using rule 33 (basic_datatype -> INT .)
    RBRACKET        reduce using rule 33 (basic_datatype -> INT .)
    RPAREN          reduce using rule 33 (basic_datatype -> INT .)
    ELIF            reduce using rule 33 (basic_datatype -> INT .)
    ELSE            reduce using rule 33 (basic_datatype -> INT .)
    RBRACE          reduce using rule 33 (basic_datatype -> INT .)


state 17

    (34) basic_datatype -> FLOAT .

    GT              reduce using rule 34 (basic_datatype -> FLOAT .)
    LT              reduce using rule 34 (basic_datatype -> FLOAT .)
    EQEQ            reduce using rule 34 (basic_datatype -> FLOAT .)
    NEQ             reduce using rule 34 (basic_datatype -> FLOAT .)
    GE              reduce using rule 34 (basic_datatype -> FLOAT .)
    LE              reduce using rule 34 (basic_datatype -> FLOAT .)
    IDENTIFIER      reduce using rule 34 (basic_datatype -> FLOAT .)
    IF              reduce using rule 34 (basic_datatype -> FLOAT .)
    INT             reduce using rule 34 (basic_datatype -> FLOAT .)
    FLOAT           reduce using rule 34 (basic_datatype -> FLOAT .)
    STRING          reduce using rule 34 (basic_datatype -> FLOAT .)
    BOOL            reduce using rule 34 (basic_datatype -> FLOAT .)
    LBRACKET        reduce using rule 34 (basic_datatype -> FLOAT .)
    LPAREN          reduce using rule 34 (basic_datatype -> FLOAT .)
    LBRACE          reduce using rule 34 (basic_datatype -> FLOAT .)
    $end            reduce using rule 34 (basic_datatype -> FLOAT .)
    COLON           reduce using rule 34 (basic_datatype -> FLOAT .)
    COMMA           reduce using rule 34 (basic_datatype -> FLOAT .)
    RBRACKET        reduce using rule 34 (basic_datatype -> FLOAT .)
    RPAREN          reduce using rule 34 (basic_datatype -> FLOAT .)
    RBRACE          reduce using rule 34 (basic_datatype -> FLOAT .)
    ELIF            reduce using rule 34 (basic_datatype -> FLOAT .)
    ELSE            reduce using rule 34 (basic_datatype -> FLOAT .)


state 18

    (35) basic_datatype -> STRING .

    GT              reduce using rule 35 (basic_datatype -> STRING .)
    LT              reduce using rule 35 (basic_datatype -> STRING .)
    EQEQ            reduce using rule 35 (basic_datatype -> STRING .)
    NEQ             reduce using rule 35 (basic_datatype -> STRING .)
    GE              reduce using rule 35 (basic_datatype -> STRING .)
    LE              reduce using rule 35 (basic_datatype -> STRING .)
    IDENTIFIER      reduce using rule 35 (basic_datatype -> STRING .)
    IF              reduce using rule 35 (basic_datatype -> STRING .)
    INT             reduce using rule 35 (basic_datatype -> STRING .)
    FLOAT           reduce using rule 35 (basic_datatype -> STRING .)
    STRING          reduce using rule 35 (basic_datatype -> STRING .)
    BOOL            reduce using rule 35 (basic_datatype -> STRING .)
    LBRACKET        reduce using rule 35 (basic_datatype -> STRING .)
    LPAREN          reduce using rule 35 (basic_datatype -> STRING .)
    LBRACE          reduce using rule 35 (basic_datatype -> STRING .)
    $end            reduce using rule 35 (basic_datatype -> STRING .)
    COLON           reduce using rule 35 (basic_datatype -> STRING .)
    COMMA           reduce using rule 35 (basic_datatype -> STRING .)
    RBRACKET        reduce using rule 35 (basic_datatype -> STRING .)
    RPAREN          reduce using rule 35 (basic_datatype -> STRING .)
    ELIF            reduce using rule 35 (basic_datatype -> STRING .)
    ELSE            reduce using rule 35 (basic_datatype -> STRING .)
    RBRACE          reduce using rule 35 (basic_datatype -> STRING .)


state 19

    (36) basic_datatype -> BOOL .

    GT              reduce using rule 36 (basic_datatype -> BOOL .)
    LT              reduce using rule 36 (basic_datatype -> BOOL .)
    EQEQ            reduce using rule 36 (basic_datatype -> BOOL .)
    NEQ             reduce using rule 36 (basic_datatype -> BOOL .)
    GE              reduce using rule 36 (basic_datatype -> BOOL .)
    LE              reduce using rule 36 (basic_datatype -> BOOL .)
    IDENTIFIER      reduce using rule 36 (basic_datatype -> BOOL .)
    IF              reduce using rule 36 (basic_datatype -> BOOL .)
    INT             reduce using rule 36 (basic_datatype -> BOOL .)
    FLOAT           reduce using rule 36 (basic_datatype -> BOOL .)
    STRING          reduce using rule 36 (basic_datatype -> BOOL .)
    BOOL            reduce using rule 36 (basic_datatype -> BOOL .)
    LBRACKET        reduce using rule 36 (basic_datatype -> BOOL .)
    LPAREN          reduce using rule 36 (basic_datatype -> BOOL .)
    LBRACE          reduce using rule 36 (basic_datatype -> BOOL .)
    $end            reduce using rule 36 (basic_datatype -> BOOL .)
    COLON           reduce using rule 36 (basic_datatype -> BOOL .)
    COMMA           reduce using rule 36 (basic_datatype -> BOOL .)
    RBRACKET        reduce using rule 36 (basic_datatype -> BOOL .)
    RPAREN          reduce using rule 36 (basic_datatype -> BOOL .)
    RBRACE          reduce using rule 36 (basic_datatype -> BOOL .)
    ELIF            reduce using rule 36 (basic_datatype -> BOOL .)
    ELSE            reduce using rule 36 (basic_datatype -> BOOL .)


state 20

    (29) list -> LBRACKET . list_items RBRACKET
    (4) list_items -> . all_datatypes COMMA list_items
    (5) list_items -> . all_datatypes
    (6) list_items -> . empty
    (37) all_datatypes -> . collection
    (38) all_datatypes -> . basic_datatype
    (7) empty -> .
    (39) collection -> . list
    (40) collection -> . tuple
    (41) collection -> . dict
    (42) collection -> . set
    (33) basic_datatype -> . INT
    (34) basic_datatype -> . FLOAT
    (35) basic_datatype -> . STRING
    (36) basic_datatype -> . BOOL
    (29) list -> . LBRACKET list_items RBRACKET
    (30) tuple -> . LPAREN list_items RPAREN
    (32) dict -> . LBRACE kv_list_items RBRACE
    (31) set -> . LBRACE list_items RBRACE

    RBRACKET        reduce using rule 7 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LBRACKET        shift and go to state 20
    LPAREN          shift and go to state 21
    LBRACE          shift and go to state 22

    list_items                     shift and go to state 33
    all_datatypes                  shift and go to state 34
    empty                          shift and go to state 35
    collection                     shift and go to state 10
    basic_datatype                 shift and go to state 11
    list                           shift and go to state 12
    tuple                          shift and go to state 13
    dict                           shift and go to state 14
    set                            shift and go to state 15

state 21
